--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-prdel
+<h1>prdel</h1>
+<h2>zde jednou bude maturitni proejekt<h2>
+<a href="https://www.spse.cz/" target="_blank">Můj hood</a>
+<a href="javascript:alert('byl jsi napálen hlupáku!!!!');">Ukázat náhled projektu</a>
